# Resume-Enhancer

./: CLAUDE_CODE_FORMAT_SPEC.md  IMPLEMENTATION_PLAN.md  analyzer-agent.txt  claude-code-project-generator.md  cybersecurity-saas-project-ideas.md  hardware-device-business-ideas.md  render.yaml  saas-project-ideas.md
claude-code-generator/: .gitignore  AGENT_LIBRARY_DESIGN.md  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CONTEXT_FILES_UPDATED.md  CONTRIBUTING.md  E2E_VALIDATION_RESULTS.md  ENHANCEMENTS.md  FINAL_CONTEXT_UPDATE.md  FINAL_SUMMARY.txt  MANIFEST.in  PHASE_1_EXPRESS_VUE_SUMMARY.md  PHASE_2_DJANGO_NUXT_SUMMARY.md  PHASE_3_SVELTE_ANGULAR_SUMMARY.md  POLISH_AND_DOCUMENTATION_COMPLETE.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  QUICKSTART_EXAMPLES.md  QUICK_PROGRESS.md  QUICK_WIN_SUMMARY.md  README.md  REFACTORING_PLAN.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2025-11-25.md  SESSION_SUMMARY_SECURITY_AND_TESTS.md  SPRINT2_QUICK_REFERENCE.md  SPRINT3_QUICK_REFERENCE.md  SPRINT4_CONTEXT_FILES_UPDATED.md  START_HERE.md  TECHNICAL_DEBT_FIX_SUMMARY.md  TEMPLATE_QUALITY_ASSESSMENT.md  TESTING.md  TESTING_IMPROVEMENTS.md  TEST_GENERATION_REPORT.md  USAGE.md  USER_GUIDE.md  VERSION_0.2.0_RELEASE_NOTES.md  WEEK1_COMPLETION_SUMMARY.md  WEEK1_PROGRESS.md  WEEK2_SESSION1_SUMMARY.md  (+15 more)
claude-code-generator/.claude/: project-context.md
claude-code-generator/.claude/agents/: architect-agent.md  file-generator-agent.md  llm-integration-agent.md  project-generator-agent.md  python-cli-agent.md  template-engine-agent.md  testing-agent.md
claude-code-generator/.claude/commands/: add-template.md  build-package.md  generate-project.md  run-tests.md  setup-dev.md  test-generator.md
claude-code-generator/.github/workflows/: release.yml  test.yml
claude-code-generator/bens-workout-web-app/: .env.example  .gitignore  Dockerfile  docker-compose.yml
claude-code-generator/bens-workout-web-app/.claude/: plugins.yaml
claude-code-generator/bens-workout-web-app/backend/: main.py  requirements.txt
claude-code-generator/bens-workout-web-app/frontend/: index.html  package.json
claude-code-generator/resume-enhancement-tool/: .dockerignore  .env.example  .gitignore  AFTER_RESTART_QUICK_START.md  API_AUTHENTICATION_GUIDE.md  AUTHENTICATION_PROTECTION_SUMMARY.md  AUTHENTICATION_SETUP.md  CONTEXT_FILES_INDEX_JAN10.md  CONTEXT_FILES_UPDATED.md  CONTEXT_UPDATE_DEC26.md  CONTEXT_UPDATE_DEC30.md  CONTEXT_UPDATE_JAN11_2026.md  CONTEXT_UPDATE_JAN13_2026_AUTH.md  CONTEXT_UPDATE_SUMMARY_DEC25.md  COVER_LETTER_OPTIMIZATION_JAN1.md  DEPLOYMENT_READY_SUMMARY.md  DEPLOY_TO_RE-VSION.md  DOCKER_VALIDATION_REPORT.md  Dockerfile  FEATURE_TEST_RESULTS.md  ORACLE_CLOUD_RESUME_GUIDE.md  PDF_DOWNLOAD_FIX_DEC29.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PRODUCTION_SECURITY_IMPLEMENTATION.md  PROJECT_STATUS.md  QUICK_START.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  RESUME_LENGTH_GUIDELINES_2026.md  RESUME_LENGTH_OPTIMIZATION.md  SESSION_SUMMARY_DEC29.md  SESSION_SUMMARY_DEC30.md  SESSION_SUMMARY_JAN01_2026.md  SESSION_SUMMARY_JAN10_2026.md  SESSION_SUMMARY_JAN11_2026_PDF.md  SESSION_SUMMARY_JAN13_2026_AUTH.md  SESSION_SUMMARY_JAN2.md  SESSION_SUMMARY_JAN2_GUIDELINES_UPDATE.md  SESSION_SUMMARY_JAN8_2026.md  STYLE_PREVIEW_GUIDE.md  (+10 more)
claude-code-generator/templates/: README.md  __init__.py  registry.yaml
claude-code-generator/test-api-service/: README.md
claude-code-generator/test-saas-app/: README.md
claude-code-generator/test-saas-enhanced/: .env.example  .gitignore  Dockerfile  docker-compose.yml
claude-code-generator/test-yes-flag/: .gitignore
(+395 files in other folders)
